# exiv2

./: .travis.yml  CMakeLists.txt
ci/: install.sh
exiv2/: CMakeLists.txt  actions.cpp  exiv2.cpp  exiv2app.hpp  utils.cpp
exiv2lib/: CMakeLists.txt
exiv2lib/include/exiv2/: basicio.hpp  bigtiffimage.hpp  bmpimage.hpp  convert.hpp  cr2image.hpp  crwimage.hpp  datasets.hpp  easyaccess.hpp  error.hpp  exif.hpp  futils.hpp  gifimage.hpp  http.hpp  image.hpp  iptc.hpp  jp2image.hpp  jpgimage.hpp  metadatum.hpp  mrwimage.hpp  orfimage.hpp  pgfimage.hpp  pngimage.hpp  preview.hpp  properties.hpp  psdimage.hpp  rafimage.hpp  rw2image.hpp  tags.hpp  tgaimage.hpp  tiffimage.hpp  types.hpp  value.hpp  webpimage.hpp  xmp_exiv2.hpp  xmpsidecar.hpp
exiv2lib/src/: CMakeLists.txt  basicio.cpp  bigtiffimage.cpp  bmpimage.cpp  canonmn_int.cpp  canonmn_int.hpp  casiomn_int.cpp  casiomn_int.hpp  convert.cpp  cr2image.cpp  crwimage.cpp  crwimage_int.cpp  crwimage_int.hpp  datasets.cpp  doxygen.hpp  easyaccess.cpp  enforce.hpp  error.cpp  exif.cpp  fujimn_int.cpp  fujimn_int.hpp  futils.cpp  gifimage.cpp  http.cpp  i18n.h  image.cpp  image_int.hpp  ini.cpp  iptc.cpp  jp2image.cpp  jpgimage.cpp  makernote_int.cpp  makernote_int.hpp  metadatum.cpp  minoltamn_int.cpp  minoltamn_int.hpp  mrwimage.cpp  nikonmn_int.cpp  nikonmn_int.hpp  olympusmn_int.cpp  (+41 more)
include/exiv2/: FileIo.hpp  MemIo.hpp  RemoteIo.hpp  basicio.hpp
samples/: CMakeLists.txt  ini-test.cpp  iotest.cpp  largeiptc-test.cpp  metacopy.cpp  mmap-test.cpp  mrwthumb.cpp  tiff-test.cpp  xmpdump.cpp  xmpparse.cpp  xmpparser-test.cpp
src/: CMakeLists.txt  FileIo.cpp  MemIo.cpp  RemoteIo.cpp  actions.cpp  basicio.cpp  bigtiffimage.cpp  crwimage.cpp  crwimage_int.cpp  epsimage.cpp  exif.cpp  image.cpp  jp2image.cpp  jpgimage.cpp  makernote_int.cpp  pgfimage.cpp  pngimage.cpp  preview.cpp  psdimage.cpp  riffvideo.cpp  tiffcomposite_int.cpp  tiffimage_int.cpp  webpimage.cpp  xmpsidecar.cpp
unitTests/: CMakeLists.txt  test_ImageFactory.cpp  test_MemIO.cpp  test_PsdImage.cpp  test_TimeValue.cpp  test_basicio.cpp  test_slice.cpp
xmpsdk/: CMakeLists.txt
xmpsdk/include/: MD5.h  XMP_Const.h
